# clams.tech

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.blog.dev  Dockerfile.docs.dev  Dockerfile.server.dev  Dockerfile.website.dev  README.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  test-services.sh
blog/: README.md  config.toml  package-lock.json  package.json
blog/content/: _index.md
blog/content/hello-world/: index.md
blog/content/on-privacy/: index.md
blog/content/release-v0.2/: index.md
blog/content/release-v0.3.0/: index.md
blog/content/release-v0.4/: index.md
blog/content/release-v1/: index.md
blog/static/: input.css
blog/templates/: base.html  index.html  page.html
docs/: README.md  docusaurus.config.ts
docs/docs/: intro.md
docs/docs/features/: exports.md  filters.md  labels.md  profiles.md
docs/docs/features/connections/: CLN.md  LND.md  NWC.md  custom-import.md  index.md  multi-sig.md  single-sig.md
docs/docs/features/settings/: backups.md  download-logs.md  hide-sensitive-data.md  index.md  server.md
docs/docs/getting-started/: connect-a-server.md  connect-a-wallet.md  create-a-profile.md  install-clams.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
src/: config.rs  main.rs  routes.rs  subscriber.rs
website/: bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
website/src/: app.css  app.html
website/src/lib/: constants.ts
website/src/lib/components/: FAQ.svelte  (+9 more)
website/src/routes/: +layout.svelte  +page.svelte
website/static/.well-known/: nostr.json
(+49 files in other folders)
