[package]
name = "clams-tech-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml", "static/**/*"]

[[bin]]
name = "clams-tech-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0"
axum = "^0"
base64 = "^0"
bitcoin = { version = "0.30.2", features = ["serde"] }
clap = { version = "^4", features = ["derive", "env"] }
lightning-invoice = { version = "0.29.0", features = ["serde"] }
lnurl-rs = { version = "0.4.0", default-features = false }
nostr = { version = "0.29.0", default-features = false, features = ["nip57"] }
nostr-sdk = "0.29.0"
home = "0.5.4"
serde = "1.0"
serde_json = "1.0"
sled = "0.34.7"
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0", features = ["cors", "fs"] }
reqwest = { version = "^0", features = ["json"] }
hex = "0.4.3"
tokio-tungstenite = "^0"
futures-util = "^0"
